apps/game-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gameserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gameserver
  template:
    metadata:
      labels:
        app: gameserver
    spec:
      containers:
      - name: gameserver-app
        image: localhost:5000/game-server:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: gameserver
spec:
  type: ClusterIP
  selector:
    app: gameserver
  ports:
  - port: 80
    targetPort: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: oauth2-proxy
spec:
  forwardAuth:
    address: http://oauth2-proxy.default.svc.cluster.local:4180/oauth2/auth
    trustForwardHeader: true
    authResponseHeaders:
      - X-Auth-Request-User
      - X-Auth-Request-Email
      - Authorization
      - X-Auth-Request-Access-Token

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gameserver-external
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/router.middlewares: default-oauth2-proxy@kubernetescrd
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
    - hosts:
      - achtung.daske.dk
      secretName: achtung-daske-dk-tls
  rules:
  - host: achtung.daske.dk
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: gameserver
            port:
              number: 80
      - path: /join/observer
        pathType: Exact
        backend:
          service:
            name: gameserver
            port:
              number: 80
